# dir_spec

./: .editorconfig  .gitignore  .markdownlint.yml  CHANGELOG.md  Cargo.toml  LICENSE  LLMS.md  README.md  mise.toml  rust-toolchain.toml  rustfmt.toml
.config/: editorconfig-checker.json  mise.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/actions/setup/: action.yml
.github/workflows/: build.yml  release.yml  security.yml
docs/: CONTRIBUTING.md  README.md  SECURITY.md
docs/dev/: README.md  code-style.md  commits.md  testing.md
docs/migration_guides/: 0.1.x-0.2.0.md  0.4.x-0.5.0.md
docs/policy/: security.md
src/: dir.rs  lib.rs  linux.rs  macos.rs  unix.rs  windows.rs  xdg.rs
