[package]
name = "dir_spec"
version = "0.2.0"
edition = "2024"
description = "A cross-platform Rust library for resolving XDG and platform-specific directories with proper fallbacks."
authors = ["Aaron Allen (@aaronmallen)"]
repository = "https://github.com/aaronmallen/dir_spec.git"
homepage = "https://github.com/aaronmallen/dir_spec"
license = "MIT"
readme = "README.md"
keywords = ["xdg", "directories", "cross-platform", "filesystem", "config"]
categories = ["filesystem", "os", "config"]

[dev-dependencies]
temp-env = "0.3"

[lints.clippy]
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

large-enum-variant = "warn"
missing-errors-doc = "allow"
missing-panics-doc = "allow"
module-name-repetitions = "allow"
must-use-candidate = "allow"
needless-pass-by-value = "warn"
redundant-clone = "warn"
return-self-not-must-use = "allow"
single-match-else = "allow"
too-many-lines = "allow"
trivially-copy-pass-by-ref = "warn"
upper-case-acronyms = "allow"

[lints.rust]
dead_code = "warn"
unsafe_code = "warn"
unused_imports = "warn"
unused_variables = "warn"
